@@ -1,4 +1,6 @@
 FlightCrew v0.7.2 ADD_DATE
+    - fixed an issue with links to fonts in commented-out CSS producing "not in manifest" errors
+    (issue #15)
     - fixed an issue with "background" and "background-image" CSS rules that referenced images
     had those same images marked as unreachable files (issue #21)
     - fixed an issue with "src" declarations in @font-face rules that have a space before the colon
